# si_num

./: pyproject.toml  setup.py
si_num/: __init__.py  from_si.py  to_si.py
si_num.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_from_si.py  test_si.py  test_to_si.py
